# departure_board_api

./: .gitignore  Cargo.toml  config.toml  schema.sql
clorinde/src/: queries.rs
clorinde/src/queries/: agencies.rs  combined.rs  routes.rs  stop_times.rs  stops.rs  trips.rs
config/: Cargo.toml
config/src/: lib.rs
db_helpers/: Cargo.toml
db_helpers/src/: copy.rs  lib.rs  route.rs  stop.rs  stop_time.rs  trip.rs
db_populator/: Cargo.toml
db_populator/src/: main.rs
departure_server/: Cargo.toml
departure_server/src/: error.rs  formatter.rs  gtfs_rt.rs  main.rs
gtfs/: Cargo.toml
gtfs/src/: agency.rs  calendar.rs  calendar_date.rs  gtfs_reader.rs  gtfs_time.rs  lib.rs  route.rs  stop.rs  stop_time.rs  trip.rs
queries/: agencies.sql  combined.sql  routes.sql  stop_times.sql  stops.sql  trips.sql
src/: gtfs.rs  main.rs  stop_times.rs  stop_tree.rs
src/gtfs/: gtfs_reader.rs  stop.rs  stop_time.rs
