[workspace]
members = ["gtfs"]

[package]
name = "departure_board_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
futures = "0.3.31"
gtfs-rt = "0.5.0"
kiddo = { version = "5.0.3", features = ["rkyv"] }
memmap = "0.7.0"
prost = "0.11"
reqwest = "0.12.15"
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
zip = "2.6.1"
clorinde = { path = "./clorinde" }
gtfs = { path = "./gtfs" }
bytes = "1.10.1"
anyhow = "1.0.98"

[dependencies.rkyv]
version = "0.7"
default-features = false
features = ["alloc", "copy_unsafe", "std", "validation", "size_64"]
