[package]
name = "db_helpers"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clorinde = { path = "../clorinde" }
gtfs = { path = "../gtfs" }
anyhow.workspace = true
futures.workspace = true
tokio-postgres = { version = "0.7.13", features = ["with-geo-types-0_7"] }
geo-types = "0.7"