[package]
name = "db_populator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clorinde = { path = "../clorinde" }
gtfs = { path = "../gtfs" }
config = { path = "../config" }
db_helpers = { path = "../db_helpers" }
tokio.workspace = true
zip.workspace = true
anyhow.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures.workspace = true
crc-fast = { version = "1.2.2", features = ["optimize_crc32_auto"] }