[package]
name = "departure_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clorinde = { path = "../clorinde" }
config = { path = "../config" }
gtfs = { path = "../gtfs" }
db_helpers = { path = "../db_helpers" }
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
deadpool.workspace = true
serde.workspace = true
gtfs-rt.workspace = true
prost.workspace = true
itertools.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
actix-web = "4"
convert_case = "0.8"
regex = "1.11"
