[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4.41"
csv = "1.3.1"
serde = "1.0.219"
anyhow = "1.0.98"
zip = "2.6.1"

[dependencies.rkyv]
version = "0.7"
default-features = false
features = ["alloc", "copy_unsafe", "std", "validation", "size_64"]