[package]
name = "gtfs"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono.workspace = true
csv.workspace = true
serde.workspace = true
anyhow.workspace = true
zip.workspace = true

[dependencies.rkyv]
version = "0.7"
default-features = false
features = ["alloc", "copy_unsafe", "std", "validation", "size_64"]